fix paths for Ubuntu

--- a/Dockerfile.8.0-cudnn7-devel-ubuntu16.04
+++ b/Dockerfile.8.0-cudnn7-devel-ubuntu16.04
@@ -17,7 +17,7 @@ EXPOSE 443
 RUN apt-get -y install cuda-samples-8-0
 
 # Fix VirtualGL for sudo
-RUN chmod u+s /usr/lib64/libdlfaker.so /usr/lib64/libvglfaker.so
+RUN chmod u+s /usr/lib/libdlfaker.so /usr/lib/libvglfaker.so
 
 # Metadata
 COPY NAE/AppDef.json.8.0-cudnn7-devel-ubuntu16.04 /etc/NAE/AppDef.json
